updated li img margin to texto; updated li margin to buttons; separated buttons's padding; fixed task's layout on smaller screens

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -137,8 +137,14 @@ header{
     font-size: 1.5em;
 
     padding-left: 1em;
+    padding-right: 1em;
 
     margin-bottom: 20px;
+}
+
+ul img{
+    position: relative;
+    left: -8px;
 }
 
 .containerTarefa li{
@@ -149,6 +155,8 @@ header{
     text-align: justify;
 
     transition: border .1s ease;
+
+    margin-right: 14px;
 }
 
 .tarefa-li:hover{
@@ -158,10 +166,6 @@ header{
 }
 
 .containerTarefa button{
-    padding: .8em 2.5em;
-
-    width: fit-content;
-
     background-color: var(--vinho-claro);
 
     border: none;
@@ -175,10 +179,16 @@ header{
     outline: none;
 
     transition: 0.2s;
+}
 
-    justify-self: center;
+.containerTarefa .botaoConcluir{
+    width: 180px;
 
-    margin-right: 10px;
+    padding: .8em 20px;
+}
+
+.containerTarefa .botaoDeletar{
+    padding: .8em 1.5em;
 }
 
 .containerTarefa button:hover{
@@ -269,18 +279,6 @@ ul{
     border-bottom: 4px solid var(--vinho-claro);
 }
 
-@media (max-width: 700px){
-    .containerTarefa{
-        display: flex;
-        flex-direction: column;
 
-        width: 90%;
-
-        margin-bottom: 4rem;
-    }
-
-    .containerNovaTarefa{
-        display: flex;
-    }
-}
+/* MOBILE RESPONSIVE */
 
